2014-07-13  Edward Smith-Rowland  <3dw4rd@verizon.net>

	PR C++/60209 - Declaration of user-defined literal operator cause error
	* g++.dg/cpp0x/pr60209-neg.C: New.
	* g++.dg/cpp0x/pr60209.C: New.
	* g++.dg/cpp1y/udlit-empty-string-neg.C: Adjust messages.

2014-07-13  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/60967
	* g++.dg/cilk-plus/pr60967.C: New.

2014-07-13  Tobias Burnus  <burnus@net-b.de>

	* gfortran.dg/coarray_atomic_4.f90: Avoid using a kind=16
	integer.

2014-07-12  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/61780
	* gfortran.dg/dependency_44.f90 : New test

2014-07-12  Tobias Burnus  <burnus@net-b.de>

	* gfortran.dg/coarray_atomic_1.f90: Update dg-error.
	* gfortran.dg/coarray_atomic_2.f90: New.
	* gfortran.dg/coarray_atomic_3.f90: New.
	* gfortran.dg/coarray_atomic_4.f90: New.
	* gfortran.dg/coarray/atomic_2.f90: New.

2014-07-11  Edward Smith-Rowland  <3dw4rd@verizon.net>

	PR c++/57644 - [C++1y] Cannot bind bitfield to lvalue reference
	* g++.dg/cpp0x/pr57644.C: New.

2014-07-11  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/53159
	* g++.dg/cpp0x/Wnarrowing1.C: New.

2014-07-11  Andreas Schwab  <schwab@linux-m68k.org>

	PR preprocessor/61389
	* gcc.dg/cpp/macsyntx.c: Update expected warnings.
	* gcc.dg/cpp/sysmac1.c: Likewise.

2014-07-11  Richard Biener  <rguenther@suse.de>

	PR middle-end/61473
	* gcc.dg/memmove-4.c: New testcase.
	* gcc.dg/strlenopt-8.c: XFAIL.
	* gfortran.dg/coarray_lib_realloc_1.f90: Adjust.

2014-07-11  Marat Zakirov  <m.zakirov@samsung.com>

	PR target/61561
	* gcc.dg/pr61561.c: New test.

2014-07-10  Tom de Vries  <tom@codesourcery.com>

	* gcc.target/mips/fuse-caller-save.c: Add addressing=absolute to
	dg-options.
	* gcc.target/mips/fuse-caller-save-micromips.c: Same.
	* gcc.target/mips/fuse-caller-save-mips16.c: Same.  Add isa_rev=0 to
	dg-options.

2014-07-10  Richard Biener  <rguenther@suse.de>

	PR c-family/61741
	* c-c++-common/torture/pr61741.c: Use signed char.
